fixed bugs with generating objects and monsters on maps that are too small

--- a/src/components/endless-dialog/styles.css
+++ b/src/components/endless-dialog/styles.css
@@ -8,6 +8,8 @@
   letter-spacing: 5px;
   line-height: 1.75;
 
+  text-transform: none;
+
   font-size: 24px;
   padding: 0 100px;
 }
